# h2_excitation_grb

./: CMakeLists.txt  code.txt  h2_excitation_grb.sln
h2_excitation_grb/: .txt  cs_electron_medium.txt  dynamic_array.cpp  dynamic_array.h  h2_electron_cs_table.cpp  h2_electron_cs_table.h  h2_elspectrum_eqs.cpp  h2_elspectrum_eqs.h  h2_excitation_grb.cpp  h2_excitation_grb.vcxproj  h2_excitation_grb.vcxproj.filters  h2_microphysics.cpp  h2_microphysics.h  h2_parameters.h  h2_saving_data.cpp  h2_saving_data.h  h2_uv_pump_data.cpp  h2_uv_pump_data.h  input_parameters.txt  input_parameters_grb.txt  input_parameters_grb_uv.txt  input_parameters_grb_xrays.txt  input_parameters_mono.txt  input_parameters_old.txt  test2.txt
h2_excitation_grb/output/: h2grb_diss_excit_data.txt  h2grb_diss_excit_int.txt  h2grb_diss_excit_rates.txt  h2grb_diss_int.txt  h2grb_electr_excit_rates.txt  h2grb_electron_energy.txt  h2grb_electron_enloss_int.txt  h2grb_electron_enloss_rates.txt  h2grb_electron_spectrum.txt  h2grb_excit_int.txt  h2grb_excit_rates.txt  h2grb_hei_populations.txt  h2grb_parameters.txt  h2grb_parameters_input.txt  h2grb_parameters_output.txt  h2grb_physparam_data.txt  h2grb_popdens.txt  h2grb_popdens_v.txt  h2grb_specimen_conc.txt  h2grb_vibr_excit_rates.txt
h2_excitation_grb/output/nh_2e4_100ev/: h2grb_electr_excit_rates.txt  h2grb_electron_energy.txt  h2grb_electron_enloss_int.txt  h2grb_electron_enloss_rates.txt  h2grb_popdens.txt  h2grb_popdens_v.txt  h2grb_specimen_conc.txt
h2_excitation_grb/output_grb/: electron_nb_density_test.txt  electron_spectra_file.txt  h2grb_parameters_input.txt
h2_excitation_grb/output_grb/nh_12e21/: electron_spectra_init.txt  h2grb_parameters_input.txt
h2_excitation_grb/output_mono/: h2grb_h2_levels.txt
h2_excitation_grb/output_mono/nh_2e4_100ev/: h2grb_electron_spectrum.txt  (+3 more)
